# some-rusty-things

./: Cargo.toml  README.md  shell.nix
src/: generators.rs  main.rs  movavg.rs  transformations.rs
